package sparks.dataflow.designer

import sparks.webui.base.{AjaxClient, DomFunction}
import sparks.webui.entity.Entity

trait DesignerEntity extends Entity with DomFunction with AjaxClient